[package]
name = "micro_heartbeat"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", features = ["task-arena-size-12288"] }
embassy-time = { version = "0.4" }
esp-backtrace = { version = "0.15.0", features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "0.23.1", features = ["esp32s3"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
esp-println = { version = "0.13.0" }
